--- a/dbt_stocks/dbt_stocks/.gitignore
+++ b/dbt_stocks/dbt_stocks/.gitignore
@@ -3,3 +3,18 @@ target/
 dbt_packages/
 logs/
 dbt_internal_packages/
+macros/
+.venv/
+venv/
+.env
+.DS_Store
+.venv.bak/
+venv.bak/
+__pycache__/
+.venv/bkp/
+venv.bkp/
+.venv.bak2/
+venv.bak2/
+seeds/
+snapshots/
+tests/
